--- a/WebApplication/Views/Home/Index.cshtml
+++ b/WebApplication/Views/Home/Index.cshtml
@@ -39,6 +39,9 @@
                 <form class="form-inline" method="post" action="@Url.Action("Logout", "Login")">
                     <button class="btn btn-success my-2 my-sm-0 ml-5" type="submit">Log out</button>
                 </form>
+                <div>
+                    <i class="fas fa-user-circle"></i>
+                </div>
             }
         </div>
     </nav>
