--- a/WebApplication/Views/Shared/_Layout.cshtml
+++ b/WebApplication/Views/Shared/_Layout.cshtml
@@ -36,16 +36,18 @@
                     </div>
                     <button class="btn btn-success my-2 my-sm-0 ml-5" type="submit">Log out</button>
                 </form>
+                <div>
+                    <i class="fas fa-user-circle"></i>
+                </div>
             }
+           
 
 
         </div>
     </nav>
 </header>
 <div class="container">
-    <main role="main" class="pb-3">
-        @RenderBody()
-    </main>
+    @RenderBody()
 
 </div>
 
