--- a/WebApplication/Views/Teacher/CreateTableGroup.cshtml
+++ b/WebApplication/Views/Teacher/CreateTableGroup.cshtml
@@ -4,7 +4,8 @@
     List<StudentModel> students = (List<StudentModel>) ViewData["studentsNotInGroup"];
 }
 <h1 class="text-center">Create a group</h1>
-<form method="post" action="@Url.Action("SubmitTableGroup", "Teacher")" class="mt-3">
+
+<form method="post" onsubmit="return isFormValid()" action="@Url.Action("SubmitTableGroup", "Teacher")" class="mt-3">
 
     <div>
         <div class="form-row">
@@ -14,27 +15,32 @@
             <div class="col" id="container-selectors">
                 <!--Use this hidden element to keep track of how many elements we need to process in the form-->
                 <input type="hidden" name="numberOfStudents" id="numberOfStudents" value="1"/>
-                <select class="custom-select studentItems" name="selectedStudent1">
+                <select class="custom-select studentItems" name="selectedStudent1" onfocus="storeCurrentValue(this.value)"  onchange="selectStudent(this.value,this)">
                     <option selected>Choose students</option>
                     @foreach (StudentModel studentModel in students)
                     {
                         <option value="@studentModel.StudentId">@(studentModel.FirstName + " " + studentModel.LastName)</option>
                     }
                 </select>
+
             </div>
             <div>
                 <button type="button" class="btn btn-primary" onclick="removeStudentFromList()">
                     <i class="fas fa-user-minus"></i>
                 </button>
+                <span id="counterNumberStudents">0/6</span>
             </div>
         </div>
     </div>
     <div class="text-center mt-3">
-        <button type="button" onclick="addStudentToList()" class="btn-primary btn">
+        <button type="button" onclick="addStudentItem()" class="btn-primary btn">
             <i class="far fa-plus-square" style="font-size: 35px"></i>
         </button>
     </div>
     <div class="text-center mt-3">
         <button type="submit" class="btn btn-primary">Submit</button>
     </div>
+    <div class="alert alert-danger mt-3" style="visibility: hidden" role="alert">
+    </div>
+  <script src="~/js/StudentSelector.js"></script>
 </form>
