--- a/WebApplication/Views/Student/Index.cshtml
+++ b/WebApplication/Views/Student/Index.cshtml
@@ -3,43 +3,30 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
     StudentModel studentModel = (StudentModel) ViewData["Student"];
 }
-<link rel="stylesheet" href="~/css/rick.css"/>
-<div style="text-align: center !important;">
-    <div class="card w-75">
-        <div class="card-body">
-            <h5 class="card-title">Student ID</h5>
-            <p class="card-text">@studentModel.StudentId</p>
-        </div>
+<div>
+    <div class="text-center custom-card">
+        <h5 class="card-title">Student ID : </h5>
+        <p class="card-text">@studentModel.StudentId</p>
     </div>
-    <div class="card w-75">
-        <div class="card-body">
-            <h5 class="card-title">Firstname:</h5>
-            <p class="card-text">@studentModel.FirstName </p>
-        </div>
+   <div class="text-center custom-card">
+       <h5 class="card-title">E-mail : </h5>
+       <a href="mailto:@studentModel.Email">@studentModel.Email</a>
+   </div>
+    <div class="text-center custom-card">
+        <h5 class="card-title">First Name : </h5>
+        <p class="card-text">@studentModel.FirstName</p>
     </div>
-    <div class="card w-75">
-        <div class="card-body">
-            <h5 class="card-title">Lastname</h5>
-            <p class="card-text">@studentModel.LastName</p>
-        </div>
+   <div class="text-center custom-card">
+       <h5 class="card-title">Last Name : </h5>
+       <p class="card-text">@studentModel.LastName</p>
+   </div>
+    <div class="text-center custom-card">
+        <h5 class="card-title">Date of birth: </h5>
+        <p class="card-text">@studentModel.DateOfBirth</p>
     </div>
-    <div class="card w-75">
-        <div class="card-body">
-            <h5 class="card-title">Date of Birth </h5>
-            <p class="card-text">@studentModel.DateOfBirth</p>
-        </div>
+    <div class="text-center custom-card">
+        <h5 class="card-title">Class Name: </h5>
+        <p class="card-text">@studentModel.TableGroup.ClassName</p>
     </div>
-    <div class="card w-75">
-        <div class="card-body">
-            <h5 class="card-title">Class Name: </h5>
-            <p class="card-text">@studentModel.TableGroup.ClassName</p>
-        </div>
-    </div>
-    <div class="card w-75">
-        <div class="card-body">
-            <h5 class="card-title">Group Name: </h5>
-            <p class="card-text">@studentModel.TableGroup.Name</p>
-        </div>
-    </div>
-    <a class="btn btn-primary" href="mailto: @studentModel.Email" role="button">Send email to student</a>
+   
 </div>
