--- a/WebApplication/wwwroot/css/mycss.css
+++ b/WebApplication/wwwroot/css/mycss.css
@@ -20,3 +20,6 @@
     margin-top: 15px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 3px 20px 0 rgba(0, 0, 0, 0.19);
 }
+#createRubricAlert{
+    visibility: hidden !important;
+}
