--- a/WebApplication/Views/Admin/DeleteStudent.cshtml
+++ b/WebApplication/Views/Admin/DeleteStudent.cshtml
@@ -1,10 +1,32 @@
 ﻿@{
     ViewData["Title"] = "Delete Student";
     Layout = "~/Views/Shared/_Layout.cshtml";
+
 }
-<form>
+<form method="post" action="@Url.Action("SubmitDeleteAction", "Admin")" onsubmit="return isEmailFieldValid()">
     <div class="form-group">
-        <label for="studentIdField">Student username</label>
-        <input type="email" class="form-control" id="studentIdField" placeholder="name@example.com">
+        <label for="studentEmailField">Student email</label>
+        <input type="email" class="form-control" id="studentEmailField" name="studentEmailField" placeholder="name@example.com">
     </div>
+    @if (@ViewData["ErrorMessage"] != null)
+    {
+        <div class="alert alert-danger" role="alert">
+            The user with this email does not exist !
+        </div>
+    }
+    else
+    {
+        <div class="alert alert-danger" role="alert" style="visibility: hidden">
+        </div>
+    }
+    <div class="text-center">
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#confirmationModal">Delete</button>
+    </div>
+   
+    @{
+        ViewData["modalTitle"] = "Delete Student from system";
+        ViewData["confirmationMessage"] = "Are you sure you want to delete this student?";
+        Html.RenderPartial("ConfirmationModal");
+
+    }
 </form>
