You can now get the student data from the database

--- a/WebApplication/Views/Teacher/GroupMembers.cshtml
+++ b/WebApplication/Views/Teacher/GroupMembers.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Select student from group";
     Layout = "~/Views/Shared/_Layout.cshtml";
     //get the data from the View Data object
-    List<StudentModel> students = (List<StudentModel>) ViewData["GroupMembers"];
+    List<Student> students = (List<Student>) ViewData["GroupMembers"];
 
 }
 @{     
