--- a/WebApplication/Views/Teacher/SelectGroup.cshtml
+++ b/WebApplication/Views/Teacher/SelectGroup.cshtml
@@ -3,7 +3,8 @@
     List<TableGroupModel> groups = (List<TableGroupModel>) ViewData["Groups"];
 
 }
-<form method="get" action="@Url.Action("GroupMembers", "Teacher")">
+<!-- put some fake group id in the action method-->
+<form method="get" action="@Url.Action("GroupMembers", "Teacher",new {id=3})">
     <div class="form-group">
         <label for="selectedGroup">Select Group</label>
         <select class="form-control" name="selectedGroup" id="selectedGroup">
