--- a/WebApplication/Views/Student/Index.cshtml
+++ b/WebApplication/Views/Student/Index.cshtml
@@ -3,6 +3,8 @@
     ViewData["Title"] = "Student profile";
     Layout = "~/Views/Shared/_Layout.cshtml";
     Student studentModel = (Student) ViewData["Student"];
+    string className = (string) ViewData["ClassName"];
+    DateTime dateTime = studentModel.DOB;
 }
 
 <div>
@@ -24,11 +26,11 @@
    </div>
     <div class="text-center custom-card">
         <h5 class="card-title">Date of birth: </h5>
-        <p class="card-text">@studentModel.DOB</p>
+        <p class="card-text">@(dateTime.Day + "/" + dateTime.Month + "/" + dateTime.Year)</p>
     </div>
     <div class="text-center custom-card">
         <h5 class="card-title">Class Name: </h5>
-        <p class="card-text">@studentModel.ClassId</p>
+        <p class="card-text">@className</p>
     </div>
    
 </div>
