--- a/WebApplication/Views/Round/CreateRound.cshtml
+++ b/WebApplication/Views/Round/CreateRound.cshtml
@@ -27,7 +27,7 @@
     <div class="row mt-4">
         <div class="col">
             <table class="table table-bordered" id="teacherRubricCreate">
-                <input type="hidden" name="tableWidth" id="tableHeight" value="3"/>
+                <input type="hidden" name="tableHeight" id="tableHeight" value="3"/>
                 <thead>
                 <tr class="table-success">
                     <th scope="col"></th>
