--- a/WebApplication/Views/Round/SelectStudentsToSendRound.cshtml
+++ b/WebApplication/Views/Round/SelectStudentsToSendRound.cshtml
@@ -59,7 +59,7 @@
 <div class="container">
     <div class="row mt-4" id="container-page">
         <div class="col">
-            <h1 class="text-center">Initialise a rubric for your class</h1>
+            <h1 class="text-center">Initialise a round for your class</h1>
             <form method="post" action="@Url.Action("SendRoundToStudents", "Round", new {id = (int) ViewData["rubricId"]})">
                 <table class="table table-bordered" id="form-table">
                     <thead>
